// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingText renders with all props 1`] = `
<Animator
  duration={500}
  finalValue={0.5}
  initialValue={0}
  shouldAnimateIn={true}
  shouldRepeat={true}
  type="opacity"
>
  <Animator
    duration={500}
    finalValue={200}
    initialValue={100}
    shouldAnimateIn={true}
    style={
      Array [
        Object {
          "backgroundColor": "#E0E0E0",
          "borderRadius": 16,
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "blue",
        },
      ]
    }
    type="translateX"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "transparent",
            "fontSize": 17,
          },
          Object {
            "color": "red",
          },
        ]
      }
    >
      Test
    </Text>
  </Animator>
</Animator>
`;

exports[`LoadingText renders with minimum required props 1`] = `
<Animator
  duration={750}
  finalValue={1}
  initialValue={0.33}
  shouldAnimateIn={true}
  shouldRepeat={true}
  type="opacity"
>
  <Animator
    duration={750}
    finalValue={0}
    initialValue={-750}
    shouldAnimateIn={true}
    style={
      Array [
        Object {
          "backgroundColor": "#E0E0E0",
          "borderRadius": 16,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
    type="translateX"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "transparent",
            "fontSize": 17,
          },
          undefined,
        ]
      }
    >
      You can't see me
    </Text>
  </Animator>
</Animator>
`;
